-Also theres a lot of new content in the mod so if you're already localizing the mod currently, you can use what you've done but you will need to put it in the correct localization file
-Hopefully the way I have organized things makes it easier for anyone trying to translate to mod, and feel free to let me know if you have questions or find any issues



Other New Additions:

-Added bungus, chunky fungus, and mushroom hoppers
-Added pumpkin putty, (list all other spooky forest enemies here as they are finished)
-Added old wood greatsword, reinforced old wood bow, old wood slingshot, old wood staff, fungal flail, and spore smacker
-Added Rotty's wrath, Jerry's Book of Stinkology, Stinky Slinger, and Branch of Gourd
-Added bustling glowshroom
-Added the femur fracturer
-Added the gilded armor set
-Added giant feral rats
-Added a mask and trophy for spooky spirit
-Added some new pets and light pets
-Added support for the new 1.4.4 version of boss checklist




~CHANGES TO EXISTING CONTENT~

-Increased all orro & boro weapon sell prices because they were far too low
-Increased the use speed for the toilet paper and necromancy for dummies
-Increased the creepy candle's magic damage bonus to 7%
-Increased harvester's scythe knockback
-Added new sprites for big bone's thorn attacks to make them look better
-Buffed the amount of defense each piece of the rotten gourd armor gives
-Renamed rotten chunk to moldy chunk, because rotten chunks are already a vanilla item
-Rotten gourd armor now requires old wood to craft along with the moldy chunks
-Increased the drop rate for the skull scepter, warlock's cloak, and warlock's hood from zomboid warlocks
-Fixed moldy chunks stacking to 999 and not 9999
-Nerfed giant tortumor contact damage from 65 to 40
-All spooky mod boss masks now drop from that bosses respective treasure bag in expert mode to be consistent with vanilla
-Spooky mod's pylons now give off colored lighting like vanilla ones do