@@ -5,9 +5,10 @@ SpookyConfig: {
 		Label: Halloween Season
 		Tooltip:
 			'''
-			Spooky mod makes terraria's halloween seasonal event always active
-			Turn this off to disable the halloween seasonal event being active
-			However, turning this off will not disable halloween if it is meant to normally happen
+			Spooky mod, by default, makes terraria's halloween seasonal event always active
+			Turn this option off to disable the halloween seasonal event being active
+			However, turning this off will not disable halloween if it's meant to normally happen 
+			(Like during october, or when you make it to wave 15 of the pumpkin moon before daytime)
 			'''
 	}
 
@@ -15,11 +16,11 @@ SpookyConfig: {
 		Label: Spooky Forest at Spawn
 		Tooltip:
 			'''
-			Changes the position where the spooky forest is placed during world generation
-			Keeping this on will make it placed at spawn, which is the default option
-			Turning this off will cause the spooky forest to generate away from spawn
-			This is applied when making new worlds, and it will have no effect on existing worlds
-			Creating smaller worlds with this option off may potentially destroy or generate over other things!
+			Changes the location of where the spooky forest is placed during world generation
+			Keeping this on will make it placed at your spawn, which is the default option
+			Turning this off will make the spooky forest generate away from your spawn, nearby the dungeon
+			This option is applied only when making new worlds, and will have no effect on existing worlds
+			(Creating smaller worlds with this option off may potentially destroy or generate over other things!)
 			'''
 	}
 
@@ -27,10 +28,11 @@ SpookyConfig: {
 		Label: Screen Shake Intensity Multiplier
 		Tooltip:
 			'''
-			Adjusts the intensity of the screen shaking effect caused by various things in the mod
-			The higher you set it, the more intense the screen shaking effect will be
-			The default value for this config is 1, which is the default screen shaking intensity
-			Turning this all the way down will disable the screen shake effect completely
+			Adjust the intensity of the screen shaking effect caused by various things in the mod
+			The default value for this setting is 1, which is the default screen shaking intensity
+			Anything higher than 1 will make the screen shake more intense
+			Anything lower than 1 will make the screen shake less intense
+			Turning this all the way down will completely disable it
 			'''
 	}
 }
